--- a/app/package.json
+++ b/app/package.json
@@ -38,6 +38,9 @@
     "typescript": "5.2.2"
   },
   "dependencies": {
+  "next": "14.2.28",
+  "react": "18.2.0",
+  "react-dom": "18.2.0"
   },
   "browserslist": [
     "ie >= 11",
