--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
-    "next": "^15.4.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
-  }
+  "next": "14.2.28",
+  "react": "18.2.0",
+  "react-dom": "18.2.0"
+}
 }
