--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
-  "next": "14.2.28",
-  "react": "18.2.0",
-  "react-dom": "18.2.0"
-}
+    "autoprefixer": "^10.4.21",
+    "lucide-react": "^0.525.0",
+    "next": "14.2.28",
+    "next-auth": "^4.24.11",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  }
 }
