--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate",   
+    "postinstall": "prisma generate",
     "db:push": "prisma db push",
     "db:seed": "prisma db seed",
     "db:studio": "prisma studio",
@@ -38,9 +38,9 @@
     "typescript": "5.2.2"
   },
   "dependencies": {
-  "next": "14.2.28",
-  "react": "18.2.0",
-  "react-dom": "18.2.0"
+    "autoprefixer": "10.4.15",
+    "lucide-react": "0.446.0",
+    "next-auth": "4.24.11"
   },
   "browserslist": [
     "ie >= 11",
