--- a/app/package.json
+++ b/app/package.json
@@ -40,7 +40,10 @@
   "dependencies": {
     "autoprefixer": "10.4.15",
     "lucide-react": "0.446.0",
-    "next-auth": "4.24.11"
+    "next": "14.2.28",
+    "next-auth": "4.24.11",    
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "browserslist": [
     "ie >= 11",
