--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "next": "14.2.28",
     "next-auth": "^4.24.11",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "framer-motion": "^11.0.17",
+    "react-intersection-observer": "^9.18.0" 
   }
 }
