--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "framer-motion": "^11.0.17",
-    "react-intersection-observer": "^9.18.0" 
+    "react-intersection-observer": "9.17.0"
   }
 }
