--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
     "autoprefixer": "^10.4.21",
+    "framer-motion": "^11.18.2",
     "lucide-react": "^0.525.0",
     "next": "14.2.28",
     "next-auth": "^4.24.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "framer-motion": "^11.0.17",
-    "react-intersection-observer": "9.17.0"
+    "react-intersection-observer": "^9.16.0"
   }
 }
