--- a/app/package.json
+++ b/app/package.json
@@ -38,17 +38,21 @@
     "typescript": "5.2.2"
   },
   "dependencies": {
-    "autoprefixer": "10.4.15",
-    "lucide-react": "0.446.0",
+   "@radix-ui/react-avatar": "^1.1.10",
+    "autoprefixer": "^10.4.21",
+    "class-variance-authority": "^0.7.1",
+    "framer-motion": "^11.18.2",
+    "lucide-react": "^0.525.0",
     "next": "14.2.28",
-    "next-auth": "4.24.11",    
+    "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "framer-motion": "^11.0.17",
-    "react-intersection-observer": "^9.16.0"
+    "react-intersection-observer": "^9.16.0",
+    "recharts": "^3.1.0"
   },
   "browserslist": [
-    "ie >= 11",
+    "ie >= 11", 
     "> 0.5%",
     "last 2 versions",
     "not dead"
