--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.10",
     "autoprefixer": "^10.4.21",
+    "class-variance-authority": "^0.7.1",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.525.0",
     "next": "14.2.28",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-intersection-observer": "^9.16.0"
+    "react-intersection-observer": "^9.16.0",
+    "recharts": "^3.1.0"
   }
 }
