--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^11.18.2",
@@ -11,6 +15,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.16.0",
-    "recharts": "^3.1.0"
+    "recharts": "^3.1.0",
+    "sonner": "^2.0.6"
   }
 }
