--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "autoprefixer": "^10.4.21",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.525.0",
     "next": "14.2.28",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.16.0",
     "recharts": "^3.1.0",
-    "sonner": "^2.0.6"
+    "sonner": "^2.0.6",
+    "zod": "^4.0.5"
   }
 }
