--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
     "react": "18.2.0",
+    "react-day-picker": "^9.8.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.16.0",
     "recharts": "^3.1.0",
