--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "@floating-ui/core": "^1.7.2",
     "@floating-ui/dom": "^1.7.2",
     "@floating-ui/utils": "^0.2.10",
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.12.0",
+    "@prisma/client": "^5.0.0",
+    "prisma": "^5.0.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
